@@ -2,7 +2,7 @@ Package: bundesbank
 Type: Package
 Title: Download Data from Bundesbank
 Version: 0.1-8
-Date: 2019-01-10
+Date: 2019-02-13
 Maintainer: Enrico Schumann <es@enricoschumann.net>
 Authors@R: person(given = "Enrico", family = "Schumann", 
                   role  = c("aut", "cre"),
