@@ -1,3 +1,9 @@
+2019-02-13  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/getSeries.R (getSeries): new arguments
+	'return.class', 'verbose' and 'dest.dir'
+	(getSeries): 'start' and 'end' may now be years
+
 2019-01-10  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/getSeries.R (getSeries): support realtime
